catkin_ws/logs/backend/build.make.1124.log.stderr
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Backend.cpp:13:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Backend.h:29:2: error: expected ‘;’ at end of member declaration
  const Eigen::Matrix4f& getCurrentPosition() { return currentPosition; }
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Backend.cpp:67:6: error: prototype for ‘void Backend::sendUpdateGraph(const Matrix4f&, int)’ does not match any in class ‘Backend’
 void Backend::sendUpdateGraph(const Eigen::Matrix4f& tm, int toNode)
      ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Backend.cpp:13:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Backend.h:28:7: error: candidate is: void Backend::sendUpdateGraph(const Matrix4f&, int) const
  void sendUpdateGraph(const Eigen::Matrix4f& tm, int toNode)
       ^
make[2]: *** [CMakeFiles/frontend.dir/src/Backend.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
